[package]
name = "flycatcherc-clif"
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.76.0"
cranelift-codegen = "0.76.0"
cranelift-frontend = "0.76.0"
cranelift-module = "0.76.0"
cranelift-object = "0.76.0"
flycatcherc = { path = "../compiler", version = "0.1.0" }
target-lexicon = "0.12"