[package]
name = "flycatcherc-clif"
description = "A Cranelift backend for Flycatcher's compiler."
version = "0.1.1"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.76.0"
cranelift-codegen = "0.76.0"
cranelift-frontend = "0.76.0"
cranelift-module = "0.76.0"
cranelift-object = "0.76.0"
flycatcherc = { path = "../compiler", version = "0.1.1" }
target-lexicon = "0.12"