[package]
name = "flycatcherc-link"
description = "Cross platform binary linking library for Flycatcher's compiler."
version = "0.1.1"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["gcc"]
gcc = []