[package]
name = "flycatcher"
version = "0.2.0"
authors = ["Zack <trimorphyt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "flycatcher"
path = "src/main.rs"

[dependencies]
unicode-xid = "0.2.2"