[package]
name = "flycatcher-diagnostic"
version = "0.2.0"
authors = ["Zack <trimorphyt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
flyc-resolve = { path = "../flyc-resolve" }