[package]
name = "flycatcher"
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
flycatcher-diagnostic = { path = "../diagnostic" }
flycatcher-parser = { path = "../parser" }