[package]
name = "flycatcher"
description = "The Flycatcher programming language."
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
flycatcherc = { path = "../compiler" }
flycatcherc-clif = { path = "../compiler-clif" }
flycatcherc-link = { path = "../compiler-link" }
flycatcher-diagnostic = { path = "../diagnostic", version = "0.1.0" }
flycatcher-parser = { path = "../parser", version = "0.1.0" }