[package]
name = "flycatcher"
description = "The Flycatcher programming language."
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
flycatcherc = { path = "../compiler", version = "0.1.1" }
flycatcherc-clif = { path = "../compiler-clif", version = "0.1.1" }
flycatcherc-link = { path = "../compiler-link", version = "0.1.1" }
flycatcher-diagnostic = { path = "../diagnostic", version = "0.1.1" }
flycatcher-parser = { path = "../parser", version = "0.1.1" }