[package]
name = "flycatcher-lexer"
description = "A lexer for Flycatcher source."
version = "0.1.1"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"