[package]
name = "flycatcher-parser"
description = "The Flycatcher programming language's parser."
version = "0.1.0"
authors = ["Zack <trimorphyt@gmail.com>"]
license = "MIT"
homepage = "https://github.com/redgush/rsflycatcher"
repository = "https://github.com/redgush/rsflycatcher"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
flycatcher-lexer = { path = "../lexer" }